--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   </head>
 
   <body>
-    <h1>Country Search</h1>
+    <h1>Country Info</h1>
     <input type="text" id="search" placeholder="Enter country name" />
     <button id="searchBtn">Search</button>
     <div id="results"></div>
     <script src="script.js"></script>
   </body>
+  <footer>
+    Data provided by <a href="https://restcountries.com/" target="_blank">REST Countries API</a>.
+</footer>
 </html>
