Search Functionality - now different options

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <body>
     <h1>Country Info</h1>
     <label for="search">Search for a country:</label>
+    <select id="searchType">
+      <option value="name">By Name</option>
+      <option value="capital">By Capital</option>
+      <option value="lang">By Language</option>
+      <option value="region">By Region</option>
+      <option value="currency">By Currency</option>
+  </select>
     <input type="text" id="search" placeholder="Enter country name" />
     <button id="searchBtn" type="button">Search</button>
     <div id="results" aria-live="polite"></div>
