--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <footer>
       Data provided by
       <a href="https://restcountries.com/" target="_blank"
-        >REST Countries API</a
+        >REST Countries API.</a
       >
     </footer>
   </body>
